fix: fix page overflowing horizontally

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,10 @@
     }
 }
 
+html {
+    @apply overflow-x-hidden;
+}
+
 html,
 body {
     @apply w-screen h-screen;
